Fix bottom margin on safari

--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -5,7 +5,7 @@ html {
     height: 100%;
     margin: 0px;
     display: table;
-    font-family: "Dosis", Helvetica, Arial, san-serif;
+    font-family: "Dosis", Helvetica, Times, serif;
     font-size: 16px;
     text-align: center;
 }
